update-baseline-and-ReadMe

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -184,6 +184,176 @@
     "        \n",
     "print(f\"\\nSubmission file saved to: {submission_file}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fixed Version "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation F1 Score (for ad detection, label=1) on Combined Training Set: [0.57534247 0.57050453 0.56031128 0.57591623 0.57217505]\n",
+      "Mean Cross-Validation F1 Score: 0.5708499113935824\n",
+      "\n",
+      "Combined Training Set Evaluation:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.83      0.98      0.90      9616\n",
+      "           1       0.94      0.62      0.75      5128\n",
+      "\n",
+      "    accuracy                           0.85     14744\n",
+      "   macro avg       0.89      0.80      0.82     14744\n",
+      "weighted avg       0.87      0.85      0.85     14744\n",
+      "\n",
+      "Confusion Matrix (Combined Training):\n",
+      "[[9424  192]\n",
+      " [1948 3180]]\n",
+      "F1 Score for ads (label 1): 0.7482352941176471\n",
+      "\n",
+      "Test Set Evaluation:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.77      0.97      0.86      1687\n",
+      "           1       0.89      0.45      0.60       913\n",
+      "\n",
+      "    accuracy                           0.79      2600\n",
+      "   macro avg       0.83      0.71      0.73      2600\n",
+      "weighted avg       0.81      0.79      0.77      2600\n",
+      "\n",
+      "Confusion Matrix (Test):\n",
+      "[[1638   49]\n",
+      " [ 503  410]]\n",
+      "F1 Score for ads (label 1): 0.597667638483965\n",
+      "\n",
+      "Submission file saved to: /Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/baseline2.jsonl\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, f1_score\n",
+    "from sklearn.model_selection import cross_val_score, StratifiedKFold\n",
+    "\n",
+    "def load_dataset(responses_file, labels_file):\n",
+    "    \"\"\"\n",
+    "    Load dataset by reading responses and labels from JSONL files and merging them.\n",
+    "    \"\"\"\n",
+    "    # Load responses into a dictionary mapping id -> response text\n",
+    "    responses = {}\n",
+    "    with open(responses_file, 'r', encoding='utf-8') as f:\n",
+    "        for line in f:\n",
+    "            data = json.loads(line)\n",
+    "            responses[data[\"id\"]] = data[\"response\"]\n",
+    "    \n",
+    "    # Load labels and merge with responses\n",
+    "    ids, texts, labels = [], [], []\n",
+    "    with open(labels_file, 'r', encoding='utf-8') as f:\n",
+    "        for line in f:\n",
+    "            data = json.loads(line)\n",
+    "            instance_id = data[\"id\"]\n",
+    "            if instance_id in responses:\n",
+    "                ids.append(instance_id)\n",
+    "                texts.append(responses[instance_id])\n",
+    "                labels.append(data[\"label\"])\n",
+    "    \n",
+    "    return ids, texts, labels\n",
+    "\n",
+    "# File paths (update these paths as needed)\n",
+    "train_responses_file = '/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/responses-train.jsonl'\n",
+    "train_labels_file = '/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/responses-train-labels.jsonl'\n",
+    "val_responses_file   = '/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/responses-validation.jsonl'\n",
+    "val_labels_file      = '/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/responses-validation-labels.jsonl'\n",
+    "test_responses_file  = '/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/responses-test.jsonl'\n",
+    "test_labels_file     = '/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/responses-test-labels.jsonl'\n",
+    "\n",
+    "# Load train and validation datasets separately\n",
+    "train_ids, train_texts, train_labels = load_dataset(train_responses_file, train_labels_file)\n",
+    "val_ids, val_texts, val_labels = load_dataset(val_responses_file, val_labels_file)\n",
+    "\n",
+    "# Combine train and validation sets into one training set\n",
+    "combined_ids = train_ids + val_ids\n",
+    "combined_texts = train_texts + val_texts\n",
+    "combined_labels = train_labels + val_labels\n",
+    "\n",
+    "# Load test dataset\n",
+    "test_ids, test_texts, test_labels = load_dataset(test_responses_file, test_labels_file)\n",
+    "\n",
+    "# -----------------------------------------------------\n",
+    "# Experiment: Logistic Regression with TF-IDF for Advertisement Detection\n",
+    "# Classifier: Logistic Regression (predicts label 1 as advertisement)\n",
+    "# Feature Extraction: TF-IDF\n",
+    "# Goal: Evaluate performance specifically for detecting advertisements (label 1)\n",
+    "# -----------------------------------------------------\n",
+    "\n",
+    "# Build the pipeline: TF-IDF vectorizer + Logistic Regression\n",
+    "pipeline = make_pipeline(\n",
+    "    TfidfVectorizer(stop_words='english', max_df=0.95),\n",
+    "    LogisticRegression(max_iter=1000, random_state=42)\n",
+    ")\n",
+    "\n",
+    "# -------------------------\n",
+    "# Cross-Validation on Combined Training Set\n",
+    "# -------------------------\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "# Use scoring 'f1' which for binary classification computes F1 score for the positive class (label 1)\n",
+    "cv_scores = cross_val_score(pipeline, combined_texts, combined_labels, cv=cv, scoring='f1')\n",
+    "print(\"Cross-validation F1 Score (for ad detection, label=1) on Combined Training Set:\", cv_scores)\n",
+    "print(\"Mean Cross-Validation F1 Score:\", np.mean(cv_scores))\n",
+    "\n",
+    "# -------------------------\n",
+    "# Train the Model on the Full Combined Training Set\n",
+    "# -------------------------\n",
+    "pipeline.fit(combined_texts, combined_labels)\n",
+    "\n",
+    "# -------------------------\n",
+    "# Evaluation on Combined Training Set\n",
+    "# -------------------------\n",
+    "train_preds = pipeline.predict(combined_texts)\n",
+    "print(\"\\nCombined Training Set Evaluation:\")\n",
+    "print(classification_report(combined_labels, train_preds))\n",
+    "print(\"Confusion Matrix (Combined Training):\")\n",
+    "print(confusion_matrix(combined_labels, train_preds))\n",
+    "# Calculate F1 Score for label 1 explicitly:\n",
+    "print(\"F1 Score for ads (label 1):\", f1_score(combined_labels, train_preds, pos_label=1))\n",
+    "\n",
+    "# -------------------------\n",
+    "# Evaluation on Test Set\n",
+    "# -------------------------\n",
+    "test_preds = pipeline.predict(test_texts)\n",
+    "print(\"\\nTest Set Evaluation:\")\n",
+    "print(classification_report(test_labels, test_preds))\n",
+    "print(\"Confusion Matrix (Test):\")\n",
+    "print(confusion_matrix(test_labels, test_preds))\n",
+    "print(\"F1 Score for ads (label 1):\", f1_score(test_labels, test_preds, pos_label=1))\n",
+    "\n",
+    "# -------------------------\n",
+    "# Submission File Generation\n",
+    "# -------------------------\n",
+    "submission_file = '/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/baseline2.jsonl'\n",
+    "with open(submission_file, 'w', encoding='utf-8') as f_out:\n",
+    "    for instance_id, pred in zip(test_ids, test_preds):\n",
+    "        result = {\n",
+    "            \"id\": instance_id,\n",
+    "            \"label\": int(pred),  # ensuring it's an integer (0 or 1)\n",
+    "            \"tag\": \"myGroupMyMethod\"\n",
+    "        }\n",
+    "        f_out.write(json.dumps(result) + \"\\n\")\n",
+    "        \n",
+    "print(f\"\\nSubmission file saved to: {submission_file}\")\n"
+   ]
   }
  ],
  "metadata": {
