--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -396,6 +396,9 @@
       "[[1638   49]\n",
       " [ 503  410]]\n",
       "F1 Score for ads (label 1): 0.597667638483965\n",
+      "Detection Accuracy for ads (label 1): 0.44906900328587074\n",
+      "False Negative Rate for ads (label 1): 0.5509309967141293\n",
+      "False Positive Rate for ads (label 1): 0.029045643153526972\n",
       "F1-score for detecting ads: 0.597667638483965\n",
       "\n",
       "Submission file saved to: /Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/Submission/baseline2.jsonl\n"
@@ -499,9 +502,20 @@
     "test_preds = pipeline.predict(test_texts)\n",
     "print(\"\\nTest Set Evaluation:\")\n",
     "print(classification_report(test_labels, test_preds))\n",
+    "cm = confusion_matrix(test_labels, test_preds)\n",
     "print(\"Confusion Matrix (Test):\")\n",
-    "print(confusion_matrix(test_labels, test_preds))\n",
+    "print(cm)\n",
     "print(\"F1 Score for ads (label 1):\", f1_score(test_labels, test_preds, pos_label=1))\n",
+    "\n",
+    "# Calculate additional metrics for label 1 based on the confusion matrix\n",
+    "TN, FP, FN, TP = cm[0,0], cm[0,1], cm[1,0], cm[1,1]\n",
+    "detection_accuracy = TP / (TP + FN) if (TP + FN) > 0 else 0  # Recall for ads\n",
+    "false_negative_rate = FN / (TP + FN) if (TP + FN) > 0 else 0\n",
+    "false_positive_rate = FP / (FP + TN) if (FP + TN) > 0 else 0\n",
+    "\n",
+    "print(\"Detection Accuracy for ads (label 1):\", detection_accuracy)\n",
+    "print(\"False Negative Rate for ads (label 1):\", false_negative_rate)\n",
+    "print(\"False Positive Rate for ads (label 1):\", false_positive_rate)\n",
     "\n",
     "# Additional snippet to calculate and print the F1 score for detecting ads (label 1)\n",
     "# Here, y_true is test_labels and y_pred is test_preds\n",
