calculation non-ad f1-Score in Baseline

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -400,6 +400,7 @@
       "False Negative Rate for ads (label 1): 0.5509309967141293\n",
       "False Positive Rate for ads (label 1): 0.029045643153526972\n",
       "F1-score for detecting ads: 0.597667638483965\n",
+      "F1-score for non-detecting ads: 0.8557993730407524\n",
       "\n",
       "Submission file saved to: /Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/Submission/baseline2.jsonl\n"
      ]
@@ -521,6 +522,11 @@
     "# Here, y_true is test_labels and y_pred is test_preds\n",
     "f1_ads = f1_score(test_labels, test_preds, pos_label=1)\n",
     "print(\"F1-score for detecting ads:\", f1_ads)\n",
+    "\n",
+    "# Additional snippet to calculate and print the F1 score for detecting ads (label 0)\n",
+    "# Here, y_true is test_labels and y_pred is test_preds\n",
+    "f1_ads = f1_score(test_labels, test_preds, pos_label=0)\n",
+    "print(\"F1-score for non-detecting ads:\", f1_ads)\n",
     "\n",
     "# -------------------------\n",
     "# Submission File Generation\n",
