--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -357,50 +357,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross-validation F1 Score (for ad detection, label=1) on Combined Training Set: [0.57534247 0.57050453 0.56031128 0.57591623 0.57217505]\n",
-      "Mean Cross-validation F1 Score: 0.5708499113935824\n",
+      "Cross-validation F1 Score (for ad detection, label=1) on Combined Training Set: [0.71892925 0.72276265 0.71688823 0.73277968 0.73611794]\n",
+      "Mean Cross-validation F1 Score: 0.7254955492618423\n",
       "\n",
       "Combined Training Set Evaluation:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.83      0.98      0.90      9616\n",
-      "           1       0.94      0.62      0.75      5128\n",
+      "           0       0.94      0.92      0.93      9616\n",
+      "           1       0.85      0.89      0.87      5128\n",
       "\n",
-      "    accuracy                           0.85     14744\n",
-      "   macro avg       0.89      0.80      0.82     14744\n",
-      "weighted avg       0.87      0.85      0.85     14744\n",
+      "    accuracy                           0.91     14744\n",
+      "   macro avg       0.89      0.90      0.90     14744\n",
+      "weighted avg       0.91      0.91      0.91     14744\n",
       "\n",
       "Confusion Matrix (Combined Training):\n",
-      "[[9424  192]\n",
-      " [1948 3180]]\n",
-      "F1 Score for ads (label 1): 0.7482352941176471\n",
+      "[[8801  815]\n",
+      " [ 551 4577]]\n",
+      "F1 Score for ads (label 1): 0.8701520912547529\n",
       "\n",
       "Test Set Evaluation:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.77      0.97      0.86      1687\n",
-      "           1       0.89      0.45      0.60       913\n",
+      "           0       0.85      0.91      0.88      1687\n",
+      "           1       0.80      0.71      0.76       913\n",
       "\n",
-      "    accuracy                           0.79      2600\n",
-      "   macro avg       0.83      0.71      0.73      2600\n",
-      "weighted avg       0.81      0.79      0.77      2600\n",
+      "    accuracy                           0.84      2600\n",
+      "   macro avg       0.83      0.81      0.82      2600\n",
+      "weighted avg       0.84      0.84      0.84      2600\n",
       "\n",
       "Confusion Matrix (Test):\n",
-      "[[1638   49]\n",
-      " [ 503  410]]\n",
-      "F1 Score for ads (label 1): 0.597667638483965\n",
-      "Detection Accuracy for ads (label 1): 0.44906900328587074\n",
-      "False Negative Rate for ads (label 1): 0.5509309967141293\n",
-      "False Positive Rate for ads (label 1): 0.029045643153526972\n",
-      "F1-score for detecting ads: 0.597667638483965\n",
-      "F1-score for non-detecting ads: 0.8557993730407524\n",
+      "[[1529  158]\n",
+      " [ 263  650]]\n",
+      "F1 Score for ads (label 1): 0.7553747821034282\n",
+      "Detection Accuracy for ads (label 1): 0.7119386637458927\n",
+      "False Negative Rate for ads (label 1): 0.28806133625410735\n",
+      "False Positive Rate for ads (label 1): 0.0936573799644339\n",
+      "F1-score for detecting ads: 0.7553747821034282\n",
+      "Detection Accuracy for non-ads (label 0): 0.9063426200355661\n",
+      "False Negative Rate for non-ads (label 0): 0.0936573799644339\n",
+      "False Positive Rate for non-ads (label 0): 0.28806133625410735\n",
+      "F1-score for non-detecting ads: 0.8789882150043116\n",
       "\n",
       "Submission file saved to: /Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/Submission/baseline2.jsonl\n"
      ]
@@ -469,7 +472,7 @@
     "# Build the pipeline: TF-IDF vectorizer + Logistic Regression\n",
     "pipeline = make_pipeline(\n",
     "    TfidfVectorizer(stop_words='english', max_df=0.95),\n",
-    "    LogisticRegression(max_iter=1000, random_state=42)\n",
+    "    LogisticRegression(class_weight='balanced',max_iter=1000, random_state=42)\n",
     ")\n",
     "\n",
     "# -------------------------\n",
@@ -523,6 +526,19 @@
     "f1_ads = f1_score(test_labels, test_preds, pos_label=1)\n",
     "print(\"F1-score for detecting ads:\", f1_ads)\n",
     "\n",
+    "# Calculate additional metrics for label 0 (non-ads) by treating label 0 as the positive class\n",
+    "# For label 0:\n",
+    "#   True Positives (TP_0) = TN (non-ads correctly predicted as non-ads)\n",
+    "#   False Negatives (FN_0) = FP (non-ads predicted as ads)\n",
+    "#   False Positives (FP_0) = FN (ads predicted as non-ads)\n",
+    "#   True Negatives (TN_0) = TP (ads correctly predicted as ads)\n",
+    "detection_accuracy_non_ads = TN / (TN + FP) if (TN + FP) > 0 else 0  # Recall for non-ads\n",
+    "false_negative_rate_non_ads = FP / (TN + FP) if (TN + FP) > 0 else 0\n",
+    "false_positive_rate_non_ads = FN / (FN + TP) if (FN + TP) > 0 else 0\n",
+    "\n",
+    "print(\"Detection Accuracy for non-ads (label 0):\", detection_accuracy_non_ads)\n",
+    "print(\"False Negative Rate for non-ads (label 0):\", false_negative_rate_non_ads)\n",
+    "print(\"False Positive Rate for non-ads (label 0):\", false_positive_rate_non_ads)\n",
     "# Additional snippet to calculate and print the F1 score for detecting ads (label 0)\n",
     "# Here, y_true is test_labels and y_pred is test_preds\n",
     "f1_ads = f1_score(test_labels, test_preds, pos_label=0)\n",
