--- a/RandomForest_TF-IDF.ipynb
+++ b/RandomForest_TF-IDF.ipynb
@@ -9,15 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross-validation F1 Macro Scores on Training Set: [0.80835809 0.79637566 0.80132451 0.79775055 0.80119626]\n",
-      "Mean Cross-Validation F1 Macro Score: 0.8010010149435903\n",
+      "Cross-validation F1 Macro Scores on Training Set: [0.77733886 0.76368942 0.76125587 0.77536341 0.76139126]\n",
+      "Mean Cross-Validation F1 Macro Score: 0.767807763929605\n",
       "\n",
       "Training Set Evaluation:\n",
       "              precision    recall  f1-score   support\n",
@@ -36,30 +36,30 @@
       "Validation Set Evaluation:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.87      0.94      0.91      2075\n",
-      "           1       0.89      0.76      0.82      1182\n",
+      "           0       0.88      0.93      0.90      2075\n",
+      "           1       0.87      0.78      0.82      1182\n",
       "\n",
       "    accuracy                           0.88      3257\n",
-      "   macro avg       0.88      0.85      0.86      3257\n",
-      "weighted avg       0.88      0.88      0.87      3257\n",
+      "   macro avg       0.87      0.85      0.86      3257\n",
+      "weighted avg       0.87      0.88      0.87      3257\n",
       "\n",
       "Confusion Matrix (Validation):\n",
-      "[[1959  116]\n",
-      " [ 287  895]]\n",
+      "[[1933  142]\n",
+      " [ 265  917]]\n",
       "\n",
       "Test Set Evaluation:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.86      0.96      0.91      1687\n",
-      "           1       0.91      0.71      0.80       913\n",
+      "           0       0.86      0.95      0.91      1687\n",
+      "           1       0.89      0.72      0.80       913\n",
       "\n",
       "    accuracy                           0.87      2600\n",
-      "   macro avg       0.89      0.84      0.85      2600\n",
-      "weighted avg       0.88      0.87      0.87      2600\n",
+      "   macro avg       0.88      0.84      0.85      2600\n",
+      "weighted avg       0.87      0.87      0.87      2600\n",
       "\n",
       "Confusion Matrix (Test):\n",
-      "[[1626   61]\n",
-      " [ 266  647]]\n",
+      "[[1609   78]\n",
+      " [ 256  657]]\n",
       "\n",
       "Submission file saved to: /Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/rf_baseline.jsonl\n"
      ]
@@ -68,11 +68,13 @@
    "source": [
     "import json\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "from sklearn.model_selection import cross_val_score, StratifiedKFold\n",
+    "\n",
     "\n",
     "def load_dataset(responses_file, labels_file):\n",
     "    \"\"\"\n",
@@ -122,7 +124,7 @@
     "# Build the pipeline: TF-IDF vectorizer + RandomForestClassifier\n",
     "pipeline = make_pipeline(\n",
     "    TfidfVectorizer(stop_words='english', max_df=0.95),\n",
-    "    RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "    RandomForestClassifier(class_weight='balanced',n_estimators=100, random_state=42)\n",
     ")\n",
     "\n",
     "# -------------------------\n",
@@ -142,6 +144,16 @@
     "# Evaluation on Training Set\n",
     "# -------------------------\n",
     "train_preds = pipeline.predict(train_texts)\n",
+    "train_report_dict = classification_report(train_labels, train_preds, output_dict=True)\n",
+    "train_cm = confusion_matrix(train_labels, train_preds)\n",
+    "\n",
+    "# Save training evaluation to CSV\n",
+    "df_train_report = pd.DataFrame(train_report_dict).transpose()\n",
+    "df_train_report.to_csv('/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/RandomForest/train_classification_report.csv', index=True)\n",
+    "\n",
+    "df_train_cm = pd.DataFrame(train_cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"])\n",
+    "df_train_cm.to_csv('/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/RandomForest/train_confusion_matrix.csv', index=True)\n",
+    "\n",
     "print(\"\\nTraining Set Evaluation:\")\n",
     "print(classification_report(train_labels, train_preds))\n",
     "print(\"Confusion Matrix (Training):\")\n",
@@ -151,6 +163,16 @@
     "# Evaluation on Validation Set\n",
     "# -------------------------\n",
     "val_preds = pipeline.predict(val_texts)\n",
+    "val_report_dict = classification_report(val_labels, val_preds, output_dict=True)\n",
+    "val_cm = confusion_matrix(val_labels, val_preds)\n",
+    "\n",
+    "# Save validation evaluation to CSV\n",
+    "df_val_report = pd.DataFrame(val_report_dict).transpose()\n",
+    "df_val_report.to_csv('/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/RandomForest/val_classification_report.csv', index=True)\n",
+    "\n",
+    "df_val_cm = pd.DataFrame(val_cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"])\n",
+    "df_val_cm.to_csv('/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/RandomForest/val_confusion_matrix.csv', index=True)\n",
+    "\n",
     "print(\"\\nValidation Set Evaluation:\")\n",
     "print(classification_report(val_labels, val_preds))\n",
     "print(\"Confusion Matrix (Validation):\")\n",
@@ -160,6 +182,16 @@
     "# Evaluation on Test Set\n",
     "# -------------------------\n",
     "test_preds = pipeline.predict(test_texts)\n",
+    "test_report_dict = classification_report(test_labels, test_preds, output_dict=True)\n",
+    "test_cm = confusion_matrix(test_labels, test_preds)\n",
+    "\n",
+    "# Save test evaluation to CSV\n",
+    "df_test_report = pd.DataFrame(test_report_dict).transpose()\n",
+    "df_test_report.to_csv('/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/RandomForest/test_classification_report.csv', index=True)\n",
+    "\n",
+    "df_test_cm = pd.DataFrame(test_cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"])\n",
+    "df_test_cm.to_csv('/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/RandomForest/test_confusion_matrix.csv', index=True)\n",
+    "\n",
     "print(\"\\nTest Set Evaluation:\")\n",
     "print(classification_report(test_labels, test_preds))\n",
     "print(\"Confusion Matrix (Test):\")\n",
