--- a/SVM_TF-IDF.ipynb
+++ b/SVM_TF-IDF.ipynb
@@ -2,57 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross-validation F1 Macro Scores on Training Set: [0.81566412 0.81044985 0.81492767 0.80775218 0.80864473]\n",
-      "Mean Cross-Validation F1 Macro Score: 0.811487710117839\n",
+      "Cross-validation F1 Macro Scores on Training Set: [0.81621183 0.81482054 0.81806471 0.81288443 0.81912467]\n",
+      "Mean Cross-Validation F1 Macro Score: 0.8162212335984329\n",
       "\n",
       "Training Set Evaluation:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.97      0.99      0.98      7541\n",
-      "           1       0.99      0.93      0.96      3946\n",
+      "           0       0.99      0.98      0.98      7541\n",
+      "           1       0.95      0.99      0.97      3946\n",
       "\n",
-      "    accuracy                           0.97     11487\n",
-      "   macro avg       0.98      0.96      0.97     11487\n",
-      "weighted avg       0.97      0.97      0.97     11487\n",
+      "    accuracy                           0.98     11487\n",
+      "   macro avg       0.97      0.98      0.98     11487\n",
+      "weighted avg       0.98      0.98      0.98     11487\n",
       "\n",
       "Confusion Matrix (Training):\n",
-      "[[7491   50]\n",
-      " [ 267 3679]]\n",
+      "[[7357  184]\n",
+      " [  57 3889]]\n",
       "\n",
       "Validation Set Evaluation:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.84      0.95      0.89      2075\n",
-      "           1       0.88      0.67      0.76      1182\n",
+      "           0       0.86      0.92      0.89      2075\n",
+      "           1       0.84      0.74      0.79      1182\n",
       "\n",
-      "    accuracy                           0.85      3257\n",
-      "   macro avg       0.86      0.81      0.83      3257\n",
-      "weighted avg       0.85      0.85      0.84      3257\n",
+      "    accuracy                           0.86      3257\n",
+      "   macro avg       0.85      0.83      0.84      3257\n",
+      "weighted avg       0.86      0.86      0.85      3257\n",
       "\n",
       "Confusion Matrix (Validation):\n",
-      "[[1969  106]\n",
-      " [ 387  795]]\n",
+      "[[1910  165]\n",
+      " [ 304  878]]\n",
       "\n",
       "Test Set Evaluation:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.84      0.95      0.89      1687\n",
-      "           1       0.89      0.66      0.76       913\n",
+      "           0       0.87      0.93      0.90      1687\n",
+      "           1       0.85      0.74      0.79       913\n",
       "\n",
-      "    accuracy                           0.85      2600\n",
-      "   macro avg       0.86      0.81      0.83      2600\n",
-      "weighted avg       0.86      0.85      0.85      2600\n",
+      "    accuracy                           0.86      2600\n",
+      "   macro avg       0.86      0.83      0.84      2600\n",
+      "weighted avg       0.86      0.86      0.86      2600\n",
       "\n",
       "Confusion Matrix (Test):\n",
-      "[[1610   77]\n",
-      " [ 308  605]]\n",
+      "[[1564  123]\n",
+      " [ 236  677]]\n",
       "\n",
       "Submission file saved to: /Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/svm_baseline.jsonl\n"
      ]
@@ -61,6 +61,7 @@
    "source": [
     "import json\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.pipeline import make_pipeline\n",
@@ -115,7 +116,7 @@
     "# Build the pipeline: TF-IDF vectorizer + LinearSVC\n",
     "pipeline = make_pipeline(\n",
     "    TfidfVectorizer(stop_words='english', max_df=0.95),\n",
-    "    LinearSVC(random_state=42, max_iter=1000)\n",
+    "    LinearSVC(class_weight='balanced',random_state=42, max_iter=1000)\n",
     ")\n",
     "\n",
     "# -------------------------\n",
@@ -135,6 +136,15 @@
     "# Evaluation on Training Set\n",
     "# -------------------------\n",
     "train_preds = pipeline.predict(train_texts)\n",
+    "train_report_dict = classification_report(train_labels, train_preds, output_dict=True)\n",
+    "train_cm = confusion_matrix(train_labels, train_preds)\n",
+    "# Save training evaluation to CSV\n",
+    "df_train_report = pd.DataFrame(train_report_dict).transpose()\n",
+    "df_train_report.to_csv('/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/svm/train_classification_report.csv', index=True)\n",
+    "\n",
+    "df_train_cm = pd.DataFrame(train_cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"])\n",
+    "df_train_cm.to_csv('/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/svm/train_confusion_matrix.csv', index=True)\n",
+    "\n",
     "print(\"\\nTraining Set Evaluation:\")\n",
     "print(classification_report(train_labels, train_preds))\n",
     "print(\"Confusion Matrix (Training):\")\n",
@@ -144,6 +154,16 @@
     "# Evaluation on Validation Set\n",
     "# -------------------------\n",
     "val_preds = pipeline.predict(val_texts)\n",
+    "val_report_dict = classification_report(val_labels, val_preds, output_dict=True)\n",
+    "val_cm = confusion_matrix(val_labels, val_preds)\n",
+    "\n",
+    "# Save validation evaluation to CSV\n",
+    "df_val_report = pd.DataFrame(val_report_dict).transpose()\n",
+    "df_val_report.to_csv('/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/svm/val_classification_report.csv', index=True)\n",
+    "\n",
+    "df_val_cm = pd.DataFrame(val_cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"])\n",
+    "df_val_cm.to_csv('//Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/svm/val_confusion_matrix.csv', index=True)\n",
+    "\n",
     "print(\"\\nValidation Set Evaluation:\")\n",
     "print(classification_report(val_labels, val_preds))\n",
     "print(\"Confusion Matrix (Validation):\")\n",
@@ -153,6 +173,17 @@
     "# Evaluation on Test Set\n",
     "# -------------------------\n",
     "test_preds = pipeline.predict(test_texts)\n",
+    "test_report_dict = classification_report(test_labels, test_preds, output_dict=True)\n",
+    "test_cm = confusion_matrix(test_labels, test_preds)\n",
+    "\n",
+    "# Save test evaluation to CSV\n",
+    "df_test_report = pd.DataFrame(test_report_dict).transpose()\n",
+    "df_test_report.to_csv('/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/svm/test_classification_report.csv', index=True)\n",
+    "\n",
+    "df_test_cm = pd.DataFrame(test_cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"])\n",
+    "df_test_cm.to_csv('/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/svm/test_confusion_matrix.csv', index=True)\n",
+    "\n",
+    "\n",
     "print(\"\\nTest Set Evaluation:\")\n",
     "print(classification_report(test_labels, test_preds))\n",
     "print(\"Confusion Matrix (Test):\")\n",
