--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -412,6 +412,7 @@
    "source": [
     "import json\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.pipeline import make_pipeline\n",
@@ -493,6 +494,15 @@
     "# Evaluation on Combined Training Set\n",
     "# -------------------------\n",
     "train_preds = pipeline.predict(combined_texts)\n",
+    "train_report_dict = classification_report(combined_labels, train_preds, output_dict=True)\n",
+    "train_cm = confusion_matrix(combined_labels, train_preds)\n",
+    "# Save training evaluation to CSV\n",
+    "df_train_report = pd.DataFrame(train_report_dict).transpose()\n",
+    "df_train_report.to_csv('/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/baseline/train_classification_report.csv', index=True)\n",
+    "\n",
+    "df_train_cm = pd.DataFrame(train_cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"])\n",
+    "df_train_cm.to_csv('/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/baseline/train_confusion_matrix.csv', index=True)\n",
+    "\n",
     "print(\"\\nCombined Training Set Evaluation:\")\n",
     "print(classification_report(combined_labels, train_preds))\n",
     "print(\"Confusion Matrix (Combined Training):\")\n",
@@ -504,6 +514,17 @@
     "# Evaluation on Test Set\n",
     "# -------------------------\n",
     "test_preds = pipeline.predict(test_texts)\n",
+    "test_report_dict = classification_report(test_labels, test_preds, output_dict=True)\n",
+    "test_cm = confusion_matrix(test_labels, test_preds)\n",
+    "\n",
+    "# Save test evaluation to CSV\n",
+    "df_test_report = pd.DataFrame(test_report_dict).transpose()\n",
+    "df_test_report.to_csv('/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/baseline/test_classification_report.csv', index=True)\n",
+    "\n",
+    "df_test_cm = pd.DataFrame(test_cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"])\n",
+    "df_test_cm.to_csv('/Users/tarekbouhairi/Desktop/Universitat Passau/Advertismenet in RAG/Ad-Detection/Advertisment-Detection/csv-results/baseline/test_confusion_matrix.csv', index=True)\n",
+    "\n",
+    "\n",
     "print(\"\\nTest Set Evaluation:\")\n",
     "print(classification_report(test_labels, test_preds))\n",
     "cm = confusion_matrix(test_labels, test_preds)\n",
