--- a/Expirements/Pre-trained Sentence Transformer/logReg.ipynb
+++ b/Expirements/Pre-trained Sentence Transformer/logReg.ipynb
@@ -949,7 +949,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -963,7 +963,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
